[build-system]
build-backend = "flit_core.buildapi"
requires = ["flit_core >=3.8.0,<4"]

[project]
name = "rmWebUiTools"
version = "1.0.0"
# authors = [
#     {name = "Your Name", email = "you@yourdomain.com"},
# ]
description = "Python helpers to connect to the Remarkable using the WebUI API."
readme = "README.MD"
requires-python = ">=3.8"
classifiers = [
    # "Development Status :: 3 - Alpha",
    # "License :: OSI Approved :: MIT License",
    # "Natural Language :: English",
    # "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
]
dependencies = [
    "requests==2.31.0"
]


[project.scripts]
rm_export = "rmWebUiTools.export:main"